Fixes bottom links on iOS Safari, previously hidden by button bar there

--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -29,12 +29,17 @@
 @import "icons";
 
 // fit and finish
+html {
+    height: 100%;
+    width: 100%;
+}
+
 body {
     background: var(--bg-normal);
     display: flex;
     flex-direction: column;
     font-size: var(--font-base);
-    height: 100vh;
+    height: 100%;
     justify-content: space-between;
     overflow: hidden;
     width: 100vw;
